[TPL_KAMELEON-ADMIN] Fixing spacing problem for logout link on error page.

--- a/administrator/templates/kameleon/less/_header.less
+++ b/administrator/templates/kameleon/less/_header.less
@@ -42,6 +42,8 @@
 			right: 2.23606798em;
 
 			li {
+				margin: 0;
+				padding: 0;
 				border-left: 1px solid rgba(0, 0, 0, 0.1);
 				border-right: 1px solid rgba(0, 0, 0, 0.1);
 
